Correções Tela ADM

--- a/aplicacao_gerenciamento_de_condominio/static/styles/styles-adm.css
+++ b/aplicacao_gerenciamento_de_condominio/static/styles/styles-adm.css
@@ -1009,3 +1009,7 @@ nav.menu-lateral.expandir + .content {
     box-sizing: border-box;
     margin: 0 auto;
 }
+
+#salvar_space{
+    margin-bottom: 30px;
+}
