--- a/aplicacao_gerenciamento_de_condominio/static/styles/styles-portaria.css
+++ b/aplicacao_gerenciamento_de_condominio/static/styles/styles-portaria.css
@@ -17,7 +17,7 @@ nav.menu-lateral{
     width: 72px;
     height: 100%;
     background-color: rgba(32, 46, 50, 1);
-    padding: 50px 0 50px 1%;
+    padding: 25px 0 25px 1%;
     box-shadow: 3px 0 0 rgba(255, 127, 80, 1);
     position: fixed;
     top: 0;
@@ -32,6 +32,7 @@ nav.menu-lateral.expandir{
 .btn-expandir{
     width: 100%;
     padding-left: 15px;
+    padding-bottom: 8px;
 }
 .btn-expandir > i{
     color: white;
@@ -47,9 +48,9 @@ ul li.itens-menu a{
     color: white;
     text-decoration: none;
     font-size: 25px;
-    padding: 17px 4%;
+    padding: 14px 2%;
     display: flex;
-    margin-bottom: 25px;
+    margin-bottom: 16px;
 }
 ul li.ativo{
     background-color: rgba(255, 127, 80, 1);
@@ -94,6 +95,45 @@ nav.menu-lateral.expandir + .content {
     display: block;
 }
 
+
+.buttons {
+    margin-bottom: 20px;
+    text-align: center; /* Alinha os botões ao centro */
+}
+
+.buttons button {
+    padding: 15px 20px;
+    margin: 15px; /* Espaçamento uniforme em todos os lados */
+    border: none;
+    border-radius: 20px; /* Adiciona bordas arredondadas */
+    background-color: rgba(255, 127, 80, 1);
+    color: white;
+    cursor: pointer;
+}
+
+.buttons button:hover {
+    background-color: #FF5722;
+}
+
+.buttons-visitantes {
+    margin-bottom: 20px;
+    text-align: center; /* Alinha os botões ao centro */
+}
+
+.buttons-visitantes button {
+    padding: 15px 20px;
+    margin: 15px; /* Espaçamento uniforme em todos os lados */
+    border: none;
+    border-radius: 20px; /* Adiciona bordas arredondadas */
+    background-color: rgba(83, 114, 124, 1);
+    color: white;
+    cursor: pointer;
+}
+
+.buttons-visitantes button:hover {
+    background-color: #FF5722;
+}
+
 .screen {
     display: none;
 }
@@ -101,158 +141,8 @@ nav.menu-lateral.expandir + .content {
     display: block;
 }
 
-/* parte do perfil*/
-#perfil{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
-#perfil h1{
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-#informacoes{
-    height: 200px;
-    font-size: 1.6rem;
-}
-
-/* parte dos visitantes*/
-#visitantes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#visitantes h1{
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.form_data_visita{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#label_visita{
-    margin-bottom: 10px;
-    font-weight: bold;
-    width: 600px;
-    text-align: left;
-}
-
-
-#btn_visita{
-    background-color: rgba(255, 127, 80, 1);
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-top: 20px;
-    width: 200px;
-    margin-bottom: 20px;
-}
-
-#data_visitaAlterar{
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    width: 100%;
-    max-width: 600px;
-}
-
-.table {
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 10px;
-    border-top: 1px solid black;
-}
-
-.table th,
-.table td {
-    width: 400px;
-    padding: 10px;
-    border-left: 1px solid black; 
-    border-top: 1px solid black;
-    text-align: center;
-}
-
-.table th:last-child,
-.table td:last-child {
-    border-right: 1px solid black;
-    border-bottom: 1px solid black; 
-}
-
-.table tr:last-child th,
-.table tr:last-child td {
-    border-bottom: 1px solid black;
-    border-right: 1px solid black; 
-}
-
-.table thead {
-    background-color: rgba(255, 127, 80, 1);
-    color: white;
-}
-
-.table tbody tr:hover {
-    background-color: #f2f2f2;
-}
-
-
-/* parte das manutenções*/
-#manutencoes{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-#manutencoes h1{
-    text-align: center;
-}
-
-.form_manutencao{
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    align-items: center;
-    padding-top: 20px;
-}
-
-.form_manutencao label{
-    margin-bottom: 10px;
-    font-weight: bold;
-    width: 100%;
-    max-width: 600px;
-    text-align: left;
-}
-
-.form_manutencao input{
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    width: 100%;
-    max-width: 600px;
-}
-
-.btn_manutencao{
-    background-color: rgba(255, 127, 80, 1);
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-top: 20px;
-    width: 200px;
-}
-
+/* Estilização geral do contêiner de agendamento */
 .conteiner {
     max-width: 800px;
     margin: 20px auto;
@@ -261,7 +151,9 @@ nav.menu-lateral.expandir + .content {
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    align-items: center;
 }
+
 
 /* Estilização do formulário */
 .conteiner form {
@@ -363,21 +255,21 @@ nav.menu-lateral.expandir + .content {
 
 /* Estilos para a modal */
 .modal {
-    display: none; 
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.4); 
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
     padding-top: 60px;
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto; 
+    margin: 5% auto;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -439,4 +331,74 @@ nav.menu-lateral.expandir + .content {
 
 #editForm button[type="submit"]:hover {
     background-color: #FF5722;
+}
+
+
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 10px;
+    border-top: 1px solid black;
+}
+
+.table th,
+.table td {
+    padding: 10px;
+    border-left: 1px solid black; 
+    border-top: 1px solid black;
+    text-align: center;
+}
+
+.table th:last-child,
+.table td:last-child {
+    border-right: 1px solid black;
+    border-bottom: 1px solid black; 
+}
+
+.table tr:last-child th,
+.table tr:last-child td {
+    border-bottom: 1px solid black;
+    border-right: 1px solid black; 
+}
+
+.table thead {
+    background-color: rgba(255, 127, 80, 1);
+    color: white;
+}
+
+.table tbody tr:hover {
+    background-color: #f2f2f2;
+}
+
+#tela_visitantes h1{
+    margin-bottom: 30px;
+}
+
+
+/* parte das manutenções*/
+.form_manutencao{
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    align-items: center;
+    padding-top: 20px;
+    text-align: center;
+}
+
+.form_manutencao label{
+    margin-bottom: 10px;
+    font-weight: bold;
+    width: 100%;
+    max-width: 600px;
+    text-align: left;
+}
+
+.form_manutencao input{
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    width: 100%;
+    max-width: 600px;
 }
