--- a/aplicacao_gerenciamento_de_condominio/templates/pag_portaria.html
+++ b/aplicacao_gerenciamento_de_condominio/templates/pag_portaria.html
@@ -103,6 +103,7 @@
                 <h1>Perfil</h1>
                 <div id="informacoes_perfil">
                     <div id="alter-user">
+                        <!--Botão-->
                         <button id="editBtn" class="alt-user"><i class="bi bi-pencil-square"></i> Editar Informações</button>
                     </div>
                 </div>
